# SCARY

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Graph/: Edge.cpp  Edge.h  Graph-commons.h  Graph.cpp  Graph.h  GraphMaps.h  PointerIteratorWrapper.h  SimpleRange.h  Vertex.cpp  Vertex.h  VertexVector.h
Graph/Algorithm/: BreadthFirstSearch.cpp  BreadthFirstSearch.h
LabyrinthGameLib/: Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  GameBoardPlacedTokenMediator.cpp  GameBoardPlacedTokenMediator.h  GameRules.cpp  GameRules.cpp.rej  GameRules.h  GameSettings.h  Maze.cpp  Maze.h  MazePiece.cpp  MazePiece.h  PathState.h
LabyrinthGameLib/Geo/: Coordinate.cpp  Coordinate.h  Direction.cpp  Direction.h
LabyrinthGameLib/IO/: ConsoleUtils.cpp  ConsoleUtils.h  ConsoleUtils.h.rej  DrawingConst.h  GameDrawer.cpp  GameDrawer.h  Token.cpp  Token.h  UserDecisions.cpp  UserDecisions.h
LabyrinthGameLib/IO/MazePieceOracle/: MazePieceOracle.h  MazeRowOracle.cpp  MazeRowOracle.h  SparePieceOracle.cpp  SparePieceOracle.h
LabyrinthGameLib/Player/: AbstractPlayer.cpp  AbstractPlayer.h  BotPlayer.cpp  BotPlayer.h  HumanPlayer.cpp  HumanPlayer.h  SmartbotPlayer.cpp  SmartbotPlayer.h
LabyrinthGameLib/Token/: PlacedToken.cpp  PlacedToken.h  PlayerToken.cpp  PlayerToken.h  StupidToken.cpp  StupidToken.h  TreasureToken.cpp  TreasureToken.h
LabyrinthGameLib/Utils/: Utils.cpp  Utils.h
Logger/: CoutLogPolicy.cpp  CoutLogPolicy.h  FileLogPolicy.cpp  FileLogPolicy.h  Log.h  LogLevel.cpp  LogLevel.h  LogPolicyInterface.h  Logger.h
UML/: BFS.iuml  Graph.iuml  GraphLib-simplified.puml  IO.iuml  Total.puml  game.iuml  geo.iuml
vsSolution/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GraphLib.vcxproj  GraphLib.vcxproj.filters  Hackathon_2021.sln  Hackathon_2021.vcxproj  Hackathon_2021.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  LabyrinthGameLib.vcxproj  LabyrinthGameLib.vcxproj.filters  LoggerLib.vcxproj  LoggerLib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
